--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-requests==2.32.4
-pytz==2025.2
-PyYAML==6.0.2
-playwright~=1.45.0
+requests>=2.32.5,<3.0.0
+pytz>=2025.2,<2026.0
+PyYAML>=6.0.3,<7.0.0
+fastmcp>=2.12.0,<2.14.0
+websockets>=13.0,<14.0
